fix: maintainability issue